tests/ui/consts/const-eval/const_panic_track_caller.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_panic_track_caller.rs:18:16
   |
LL | const X: u32 = c();
   |                ^^^ panic: hey
   |
note: inside `c`
  --> $DIR/const_panic_track_caller.rs:15:5
   |
LL |     b()
   |     ^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
